--- a/index.html
+++ b/index.html
@@ -1,45 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <title>OOP Game JS</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style type="text/css">
     body {
-      background-color: rgb(58, 58, 58);
-      color: white;
+      background-color: rgb(80, 80, 80);
       padding: 0px;
       margin: 0px;
-    }
-
-    #box1 {
-      width: 200px;
-      min-height: 200px;
-      border: 1px solid white;
-      margin-top: 10px;
-      margin-left: 10px;
-      font-size: 10px;
     }
   </style>
   <script type="text/javascript" src="https://momentjs.com/downloads/moment.js"></script>
   <script type="text/javascript" src="Config.js"></script>
   <script type="text/javascript" src="Colors.js"></script>
-  <script type="text/javascript" src="Vector2.js"></script>
+  <script type="text/javascript" src="Physics.js"></script>
   <script type="text/javascript" src="GameObject.js"></script>
+  <script type="text/javascript" src="Spheroid.js"></script>
+  <script type="text/javascript" src="Vector2DPosition.js"></script>
+  <script type="text/javascript" src="StaticGameObject.js"></script>
   <script type="text/javascript" src="Quadrilateral.js"></script>
   <script type="text/javascript" src="FPSCounter.js"></script>
   <script type="text/javascript" src="Game.js"></script>
   <script type="text/javascript" src="Program.js"></script>
   <script type="text/javascript">
-    document.onreadystatechange = function () {
+    document.onreadystatechange = (ev) => {
       if (document.readyState == "complete") {
         Program.Main();
       }
-    };
+    }
   </script>
+  <title>Javascript Game Engine - OOP</title>
 </head>
 
 <body>
-
 </body>
 
 </html>
