modified collision, gravity, added controller but not finished

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
   <script type="text/javascript" src="https://momentjs.com/downloads/moment.js"></script>
   <script type="text/javascript" src="Config.js"></script>
   <script type="text/javascript" src="Colors.js"></script>
-  <script type="text/javascript" src="Physics.js"></script>
+  <script type="text/javascript" src="Controller.js"></script>
+  <script type="text/javascript" src="Gravity.js"></script>
+  <script type="text/javascript" src="Vector2.js"></script>
+  <script type="text/javascript" src="Collision.js"></script>
   <script type="text/javascript" src="GameObject.js"></script>
-  <script type="text/javascript" src="Spheroid.js"></script>
-  <script type="text/javascript" src="Vector2DPosition.js"></script>
-  <script type="text/javascript" src="StaticGameObject.js"></script>
   <script type="text/javascript" src="Quadrilateral.js"></script>
+  <script type="text/javascript" src="Sphere.js"></script>
   <script type="text/javascript" src="FPSCounter.js"></script>
   <script type="text/javascript" src="Game.js"></script>
   <script type="text/javascript" src="Program.js"></script>
